--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,72 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="716"
+    android:viewportHeight="800">
+  <group android:scaleX="0.47435"
+      android:scaleY="0.53"
+      android:translateX="188.1827"
+      android:translateY="188">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M310.3,63.93C368.24,40.53 428.97,34.81 486.46,44.22C421.63,75.21 371.05,129.78 345.05,196.83C319.05,263.89 319.57,338.37 346.52,405.1C373.46,471.83 424.8,525.8 490.07,556C555.33,586.2 629.62,590.36 697.79,567.64C667.35,608.34 627.91,641.43 582.56,664.33C537.2,687.22 487.16,699.3 436.34,699.61C385.52,699.92 335.31,688.46 289.63,666.12C243.95,643.79 204.04,611.18 173.02,570.86C142,530.53 120.71,483.58 110.81,433.67C100.91,383.76 102.68,332.25 115.97,283.16C129.27,234.07 153.73,188.74 187.44,150.71C221.15,112.68 263.2,82.98 310.3,63.93Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M402,492.5C368,456.5 315,374.5 327.5,271"
+        android:strokeWidth="10"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M136.5,510.5C105,442.5 87.5,351.5 126.5,251.5"
+        android:strokeWidth="10"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M5,326.09C56,296.59 193.4,255.29 335,326.09C476.6,396.89 598.33,355.59 641.5,326.09"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M403.01,493.29C406.54,496.89 414.22,504.6 416.74,506.57"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M30,404.09C81,374.59 218.4,333.29 360,404.09"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M312,441C363,470.5 500.4,511.8 642,441"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M329.04,257C328.35,262 326.98,272.8 326.96,276"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M134.85,507.9C136.98,512.48 141.65,522.3 143.37,525.01"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M129.41,243.54C127.52,248.21 123.54,258.34 122.74,261.44"
+        android:strokeWidth="9"
+        android:fillColor="#00000000"
+        android:strokeColor="#656565"
+        android:strokeLineCap="round"/>
+  </group>
 </vector>
