Fixed bugs and added some tweaks

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="64dp"
         android:gravity="center"
         android:textSize="48sp"
+        app:fontFamily="@font/montserrat_semi_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
