--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,19 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/settings_iv"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="44dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/weather_iv"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/weather_iv"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="164dp"
+        android:layout_height="164dp"
         android:layout_marginTop="154dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,12 +28,13 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/temp_tv"
-        tools:text="28"
+        tools:text="-28°"
         android:textSize="48sp"
         android:gravity="center"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="104dp"
+        android:layout_height="80dp"
         android:layout_marginTop="64dp"
+        app:fontFamily="@font/montserrat_regular"
         app:layout_constraintTop_toBottomOf="@id/weather_iv"
         app:layout_constraintEnd_toStartOf="@id/another_temp_tv"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -42,12 +45,11 @@
         tools:text="2 м\с, ЮВ"
         android:gravity="start"
         android:textSize="14sp"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="96dp"
+        android:layout_height="18dp"
         android:layout_marginTop="64dp"
         app:layout_constraintTop_toBottomOf="@id/weather_iv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/temp_tv" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
