--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,44 +12,182 @@
         android:layout_height="30dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="44dp"
+        android:src="@drawable/ic_settings"
         app:layout_constraintBottom_toTopOf="@+id/weather_iv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/city_name_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/settings_iv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/settings_iv"
+        tools:text="Moscow" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/weather_iv"
         android:layout_width="164dp"
         android:layout_height="164dp"
         android:layout_marginTop="154dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:src="@drawable/ic_fog_cloudy" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/temp_tv"
-        tools:text="-28°"
-        android:textSize="48sp"
-        android:gravity="center"
-        android:layout_width="104dp"
-        android:layout_height="80dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/temps_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        app:fontFamily="@font/montserrat_regular"
-        app:layout_constraintTop_toBottomOf="@id/weather_iv"
-        app:layout_constraintEnd_toStartOf="@id/another_temp_tv"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/another_temp_tv"
-        tools:text="2 м\с, ЮВ"
-        android:gravity="start"
-        android:textSize="14sp"
-        android:layout_width="96dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="64dp"
-        app:layout_constraintTop_toBottomOf="@id/weather_iv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/temp_tv" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weather_iv">
+
+        <TextView
+            android:id="@+id/temp_tv"
+            android:layout_width="104dp"
+            android:layout_height="80dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:gravity="center"
+            android:textSize="48sp"
+            app:layout_constraintEnd_toStartOf="@+id/wind_speed_tv"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="30">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/max_temp_iv"
+            android:layout_width="12dp"
+            android:layout_height="10dp"
+            app:layout_constraintStart_toStartOf="@+id/temp_tv"
+            app:layout_constraintTop_toBottomOf="@+id/temp_tv"
+            tools:src="@drawable/ic_max_temp">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/max_temp_tv"
+            android:layout_width="28dp"
+            android:layout_height="14dp"
+            android:fontFamily="@font/montserrat_light"
+            android:gravity="center"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="@+id/max_temp_iv"
+            app:layout_constraintStart_toEndOf="@+id/max_temp_iv"
+            app:layout_constraintTop_toTopOf="@+id/max_temp_iv"
+            tools:text="32">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/min_temp_tv"
+            android:layout_width="28dp"
+            android:layout_height="14dp"
+            android:fontFamily="@font/montserrat_light"
+            android:gravity="center"
+            android:textSize="11sp"
+            app:layout_constraintEnd_toEndOf="@+id/temp_tv"
+            app:layout_constraintTop_toTopOf="@+id/max_temp_tv"
+            tools:text="-32">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/min_temp_iv"
+            android:layout_width="12dp"
+            android:layout_height="10dp"
+            app:layout_constraintEnd_toStartOf="@+id/min_temp_tv"
+            app:layout_constraintTop_toTopOf="@+id/max_temp_iv"
+            tools:src="@drawable/ic_min_temp">
+
+        </ImageView>
+
+
+        <TextView
+            android:id="@+id/wind_speed_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:gravity="start"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/temp_tv"
+            app:layout_constraintTop_toTopOf="@+id/temp_tv"
+            tools:text="2 м\с, ЮВ">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/pressure_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:gravity="start"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/wind_speed_tv"
+            app:layout_constraintTop_toBottomOf="@+id/wind_speed_tv"
+            tools:text="9999 мм рт. ст.">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/humidity_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:gravity="start"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/pressure_tv"
+            app:layout_constraintTop_toBottomOf="@+id/pressure_tv"
+            tools:text="65 %">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/wind_speed_iv"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@+id/wind_speed_tv"
+            app:layout_constraintTop_toTopOf="@+id/wind_speed_tv"
+            tools:src="@drawable/ic_wind">
+
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/pressure_iv"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@+id/pressure_tv"
+            app:layout_constraintTop_toTopOf="@+id/pressure_tv"
+            tools:src="@drawable/ic_temperature">
+
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/humidity_iv"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@+id/humidity_tv"
+            app:layout_constraintTop_toTopOf="@+id/humidity_tv"
+            tools:src="@drawable/ic_humidity">
+
+        </ImageView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
