--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
         android:id="@+id/settings_tv"
         android:layout_width="108dp"
         android:layout_height="28dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="44dp"
         android:gravity="center"
         android:textSize="20sp"
         app:fontFamily="@font/montserrat_regular"
@@ -23,10 +23,10 @@
         android:id="@+id/back_iv"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:src="@drawable/ic_back"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
