--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -172,7 +172,7 @@
             android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toStartOf="@+id/pressure_tv"
             app:layout_constraintTop_toTopOf="@+id/pressure_tv"
-            tools:src="@drawable/ic_temperature">
+            tools:src="@drawable/ic_pressure">
 
         </ImageView>
 
