--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,8 +7,8 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/settings_tv"
-        android:layout_width="108dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:gravity="center"
         android:textSize="20sp"
